--- a/public/api.yml
+++ b/public/api.yml
@@ -99,6 +99,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NoEntryForId'
+        '422':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                nameTooShort:
+                  value:
+                    message: Please provide a valid activity name with at least 3 letters.
         '406':
           description: Error
           content:
@@ -171,6 +181,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NoEntryForId'
+        '422':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                invalidUser:
+                  value:
+                    message: Please enter a valid user.
+                invalidStart:
+                  value:
+                    message: Please enter a valid contract start.
         '406':
           description: Error
           content:
@@ -1506,6 +1529,16 @@ paths:
               type: object
               $ref: '#/components/schemas/Preset'
       responses:
+        '422':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                nameTooShort:
+                  value:
+                    message: Please provide a valid preset name with at least 3 letters.
         '404':
           description: No entry for id
           content:
@@ -1838,6 +1871,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UnauthorizedResponse'
+        '422':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                nameTooShort:
+                  value:
+                    message: Please provide a valid team name with at least 3 letters.
         '404':
           description: No entry for id
           content:
