--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,18 +37,20 @@ jobs:
         run: |
           # Ensure unittest DB exists and schema/data are loaded (use dev compose db_unittest init)
           docker compose -f compose.yml -f compose.dev.yml up -d db_unittest
-          # Wait for DB to be healthy
+          # Wait for DB to be healthy (prefer mariadb-admin, fallback to mysqladmin)
           for i in {1..30}; do
-            docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mysqladmin ping -h 127.0.0.1 -uroot -p$$MYSQL_ROOT_PASSWORD' && break || sleep 2;
+            docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mariadb-admin ping -h 127.0.0.1 -uroot -p$$MYSQL_ROOT_PASSWORD || mysqladmin ping -h 127.0.0.1 -uroot -p$$MYSQL_ROOT_PASSWORD' && break || sleep 2;
           done
-          # Create DB/user and load schema+fixtures for unittest
-          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mysql -h 127.0.0.1 -uroot -p$$MYSQL_ROOT_PASSWORD < /docker-entrypoint-initdb.d/000_testdatabase.sql || true'
-          # Load base schema and fixes (mirror local dev init)
-          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mysql -h 127.0.0.1 -uunittest -punittest unittest < /var/www/html/sql/000_base.sql'
-          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mysql -h 127.0.0.1 -uunittest -punittest unittest < /var/www/html/sql/001_fixes.sql'
-          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mysql -h 127.0.0.1 -uunittest -punittest unittest < /var/www/html/sql/002_contracts.sql'
+          # Optionally create DB/user and grants if script exists locally
+          if [ -f sql/unittest/000_testdatabase.sql ]; then
+            docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mariadb -h 127.0.0.1 -uroot -p$$MYSQL_ROOT_PASSWORD' < sql/unittest/000_testdatabase.sql || true
+          fi
+          # Load base schema and fixes (mirror local dev init) by piping from host
+          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mariadb -h 127.0.0.1 -uunittest -punittest unittest' < sql/000_base.sql
+          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mariadb -h 127.0.0.1 -uunittest -punittest unittest' < sql/001_fixes.sql
+          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mariadb -h 127.0.0.1 -uunittest -punittest unittest' < sql/002_contracts.sql
           # Load unittest test data (truncates and inserts)
-          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mysql -h 127.0.0.1 -uunittest -punittest unittest < /var/www/html/sql/unittest/002_testdata.sql'
+          docker compose -f compose.yml -f compose.dev.yml exec -T db_unittest sh -c 'mariadb -h 127.0.0.1 -uunittest -punittest unittest' < sql/unittest/002_testdata.sql
 
       - name: Static analysis (PHPStan)
         run: |
