--- a/config/packages/test/monolog.yaml
+++ b/config/packages/test/monolog.yaml
@@ -1,17 +1,11 @@
 monolog:
-    handlers:
-        main:
-            type: "null"
-        console:
-            type: "null"
-        php:
-            type: "null"
-
-        # Uncomment to get logging in your browser
-        # you may have to allow bigger header sizes in your Web server configuration
-        #firephp:
-        #    type: firephp
-        #    level: info
-        #chromephp:
-        #    type: chromephp
-        #    level: info
+  handlers:
+    main:
+      type: stream
+      path: '%kernel.logs_dir%/%kernel.environment%.log'
+      level: debug
+      channels: [ '!event' ]
+    console:
+      type: console
+      process_psr_3_messages: false
+      channels: [ '!event', '!doctrine', '!console' ]
