security: add AccessDenied subscriber for legacy 403 text; adopt ROLE_PL attributes on SaveTeam/DeleteUser with in-action guards preserved; keep admin save endpoints without IsGranted to retain 406/422 semantics; update tests (loginUser, token clearing, PL user); update docs/BREAKING-CHANGES.md; fast tests green

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -87,6 +87,11 @@ services:
         bind:
             $projectDir: '%kernel.project_dir%'
 
+    # Access denied subscriber to keep legacy 403 message
+    App\EventSubscriber\AccessDeniedSubscriber:
+        tags:
+            - { name: kernel.event_subscriber }
+
     # Add this: Configure ClockInterface and SystemClock
     App\Service\ClockInterface:
         alias: App\Service\SystemClock
