--- a/compose.yml
+++ b/compose.yml
@@ -85,7 +85,7 @@ services:
     image: nginx:alpine
     volumes:
       - app-pub:/var/www/html/public
-      - ./nginx-conf.d-default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
     restart: always
@@ -100,7 +100,7 @@ services:
     image: nginx:alpine
     volumes:
       - ./public:/var/www/html/public
-      - ./nginx-conf.d-dev.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/dev.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app-dev
     restart: "no"
