--- a/composer.json
+++ b/composer.json
@@ -100,32 +100,32 @@
     "post-update-cmd": [
       "@auto-scripts"
     ],
-    "cs-check": "php -d memory_limit=512M vendor/laravel/pint/builds/pint --test",
-    "cs-fix": "php -d memory_limit=512M vendor/laravel/pint/builds/pint",
+    "cs-check": "php -d memory_limit=512M vendor/laravel/pint/builds/pint --test --config=config/quality/pint.json",
+    "cs-fix": "php -d memory_limit=512M vendor/laravel/pint/builds/pint --config=config/quality/pint.json",
     "cs-check-batch": [
-      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Entity --test",
-      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Controller --test",
-      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Repository --test",
-      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Service --test",
-      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Command src/Dto src/Enum src/Event src/EventSubscriber src/Exception src/Extension src/Model src/Response src/Security src/Util src/Validator src/ValueObject src/Kernel.php --test"
+      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Entity --test --config=config/quality/pint.json",
+      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Controller --test --config=config/quality/pint.json",
+      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Repository --test --config=config/quality/pint.json",
+      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Service --test --config=config/quality/pint.json",
+      "php -d memory_limit=256M vendor/laravel/pint/builds/pint src/Command src/Dto src/Enum src/Event src/EventSubscriber src/Exception src/Extension src/Model src/Response src/Security src/Util src/Validator src/ValueObject src/Kernel.php --test --config=config/quality/pint.json"
     ],
-    "analyze": "phpstan analyze --configuration=phpstan.neon --memory-limit=512M",
-    "analyze:arch": "phpstan analyze --configuration=phpstan-phpat.neon --memory-limit=512M",
-    "rector": "rector process src",
+    "analyze": "phpstan analyze --configuration=config/quality/phpstan.neon --memory-limit=512M",
+    "analyze:arch": "phpstan analyze --configuration=config/quality/phpstan-phpat.neon --memory-limit=512M",
+    "rector": "rector process src --config=config/quality/rector.php",
     "test": "APP_ENV=test php -d memory_limit=512M bin/phpunit",
     "test:unit": "APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=unit",
     "test:controller": "APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=controller",
     "test:fast": "APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=unit --do-not-cache-result && APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=controller --do-not-cache-result",
     "test:coverage": "APP_ENV=test php -d memory_limit=512M bin/phpunit --coverage-html=var/coverage",
     "test:coverage-text": "APP_ENV=test php -d memory_limit=512M bin/phpunit --coverage-text",
-    "test:parallel": "APP_ENV=test PARATEST_PARALLEL=1 paratest --configuration=paratest.xml --processes=$(nproc) --testsuite=unit-parallel --max-batch-size=50",
-    "test:parallel:unit": "APP_ENV=test PARATEST_PARALLEL=1 paratest --configuration=paratest.xml --processes=$(nproc) --testsuite=unit-parallel --max-batch-size=50",
-    "test:parallel:safe": "APP_ENV=test PARATEST_PARALLEL=1 paratest --configuration=paratest.xml --processes=4 --testsuite=unit-parallel --max-batch-size=25",
+    "test:parallel": "APP_ENV=test PARATEST_PARALLEL=1 paratest --configuration=config/testing/paratest.xml --processes=$(nproc) --testsuite=unit-parallel --max-batch-size=50",
+    "test:parallel:unit": "APP_ENV=test PARATEST_PARALLEL=1 paratest --configuration=config/testing/paratest.xml --processes=$(nproc) --testsuite=unit-parallel --max-batch-size=50",
+    "test:parallel:safe": "APP_ENV=test PARATEST_PARALLEL=1 paratest --configuration=config/testing/paratest.xml --processes=4 --testsuite=unit-parallel --max-batch-size=25",
     "test:parallel:all": "@test:parallel:unit && APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=controller-sequential",
-    "test:parallel:coverage": "APP_ENV=test PARATEST_PARALLEL=1 paratest --configuration=paratest.xml --processes=$(nproc) --testsuite=unit-parallel --coverage-html=var/coverage-parallel",
-    "perf:export": "APP_ENV=test php -d memory_limit=1G -d max_execution_time=300 bin/phpunit --configuration=phpunit-performance.xml --group=performance",
-    "perf:unit": "APP_ENV=test php -d memory_limit=1G -d max_execution_time=300 bin/phpunit --configuration=phpunit-performance.xml --testsuite=performance-unit",
-    "perf:integration": "APP_ENV=test php -d memory_limit=1G -d max_execution_time=300 bin/phpunit --configuration=phpunit-performance.xml --testsuite=performance-integration",
+    "test:parallel:coverage": "APP_ENV=test PARATEST_PARALLEL=1 paratest --configuration=config/testing/paratest.xml --processes=$(nproc) --testsuite=unit-parallel --coverage-html=var/coverage-parallel",
+    "perf:export": "APP_ENV=test php -d memory_limit=1G -d max_execution_time=300 bin/phpunit --configuration=config/testing/phpunit-performance.xml --group=performance",
+    "perf:unit": "APP_ENV=test php -d memory_limit=1G -d max_execution_time=300 bin/phpunit --configuration=config/testing/phpunit-performance.xml --testsuite=performance-unit",
+    "perf:integration": "APP_ENV=test php -d memory_limit=1G -d max_execution_time=300 bin/phpunit --configuration=config/testing/phpunit-performance.xml --testsuite=performance-integration",
     "perf:benchmark": "APP_ENV=test php -d memory_limit=1G -d max_execution_time=600 tests/Performance/PerformanceBenchmarkRunner.php",
     "perf:report": "APP_ENV=test php -d memory_limit=1G -d max_execution_time=600 tests/Performance/PerformanceBenchmarkRunner.php var/performance-report.json",
     "perf:baseline": "mkdir -p var && APP_ENV=test php -d memory_limit=1G -d max_execution_time=600 tests/Performance/PerformanceBenchmarkRunner.php var/performance-baseline.json",
