--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,10 @@
     "phpat/phpat": "^0.11",
     "phpstan/extension-installer": "^1.4",
     "phpstan/phpstan": "^2.1",
+    "phpstan/phpstan-deprecation-rules": "*",
     "phpstan/phpstan-doctrine": "^2.0",
+    "phpstan/phpstan-phpunit": "*",
+    "phpstan/phpstan-strict-rules": "*",
     "phpstan/phpstan-symfony": "^2.0",
     "phpunit/phpunit": "^12.3",
     "rector/rector": "^2.1",
