feat: add PSR-3 logger validation with sfp-phpstan-psr-log
- Install struggle-for-php/sfp-phpstan-psr-log extension
- Fix ModernLdapService DI parameter name mismatch
- Update baseline to include 27 new PSR-3 violations
- Document PSR-3 logger best practices in migration guide

The PSR-3 extension ensures:
- Static log messages with placeholders (not dynamic strings)
- Proper exception context (Throwable objects, not class names)
- Compliance with PSR-3 logging standards

Total baselined errors increased from 1201 to 1228.

--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,7 @@
     "phpstan/phpstan-symfony": "^2.0",
     "phpunit/phpunit": "^12.3",
     "rector/rector": "^2.1",
+    "struggle-for-php/sfp-phpstan-psr-log": "*",
     "symfony/browser-kit": "^7.3",
     "symfony/css-selector": "^7.3",
     "symfony/debug-bundle": "^7.3",
