--- a/config/quality/phpstan.dist.neon
+++ b/config/quality/phpstan.dist.neon
@@ -1,10 +1,10 @@
 parameters:
     level: 8
     paths:
-        - bin/
-        - config/
-        - public/
-        - src/
+        - ../../bin/
+        - ../../config/
+        - ../../public/
+        - ../../src/
     excludePaths:
-        - tests/*
+        - ../../tests/*
     treatPhpDocTypesAsCertain: false
