fix: add phpstan.neon to repository for CI pipeline
- Remove phpstan.neon from .gitignore
- Simplify composer analyze script to use default config
- PHPStan now finds its configuration file automatically

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ yarn-error.log
 ###< phpunit/phpunit ###
 
 ###> phpstan/phpstan ###
-phpstan.neon
+# phpstan.neon is now tracked in the repository
 ###< phpstan/phpstan ###
 ###> symfony/phpunit-bridge ###
 .phpunit
