--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,4 +75,15 @@ jobs:
         run: |
           make test
 
+      - name: Run tests with coverage
+        env:
+          COMPOSE_PROFILES: dev
+        run: |
+          docker compose run --rm -e APP_ENV=test -e XDEBUG_MODE=off app-dev php -d memory_limit=2G ./bin/phpunit --coverage-clover var/coverage/clover.xml || true
 
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
+        with:
+          files: var/coverage/clover.xml
+          fail_ci_if_error: false
+          verbose: true
