chore: replace Husky with CaptainHook for git hooks
- Remove Husky pre-commit hook (Node.js based)
- Add CaptainHook (PHP native) with composer plugin
- Configure pre-commit hooks:
  - PHP syntax linting
  - Laravel Pint code style check
  - PHPStan static analysis
- Configure commit-msg hooks:
  - Conventional commits format validation
  - Message length and capitalization rules

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
       "ocramius/package-versions": true,
       "php-http/discovery": true,
       "phpstan/extension-installer": true,
-      "symfony/flex": true
+      "symfony/flex": true,
+      "captainhook/plugin-composer": true
     }
   },
   "prefer-stable": true,
@@ -73,6 +74,8 @@
   },
   "require-dev": {
     "brianium/paratest": "^7.11",
+    "captainhook/captainhook": "^5.27",
+    "captainhook/plugin-composer": "^5.3",
     "dg/bypass-finals": "*",
     "laravel/pint": "^1.18",
     "phpat/phpat": "^0.11",
